fix: modal does not get cut off on low screens

--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -15,6 +15,7 @@
   transition: opacity var(--modalAnimationTime);
   opacity: 0;
   pointer-events: none;
+  overflow: auto;
 }
 
 .Modal--opened {
@@ -28,6 +29,7 @@
   max-width: 960px;
   width: 90%;
   overflow: hidden;
+  margin: auto;
   transform: scale(0.5);
   transition: transform var(--modalAnimationTime);
 }
